replace github home profile with this project repo

--- a/src/hugo.toml
+++ b/src/hugo.toml
@@ -28,7 +28,7 @@ ignoreErrors = ["error-disable-taxonomy"]
   # Social links
   [[params.socialLinks]]
     name = "GitHub"
-    url = "https://github.com/krusty93"
+    url = "https://github.com/Krusty93/personal-blog"
   
   [[params.socialLinks]]
     name = "LinkedIn"
